--- a/core/templates/core/frontpage.html
+++ b/core/templates/core/frontpage.html
@@ -3,6 +3,67 @@
 {% block title %} Home | {% endblock %}
 
 {% block content %}
+<section class="hero is-dark is-bold">
+    <div class="hero-body">
+        <div class="container is-fluid">
+            <h1 class="title has-text-white has-text-centered is-size-2-touch is-size-1-desktop">
+                Welcome to Our Blog
+            </h1>
+            <h2 class="subtitle has-text-grey-light has-text-centered is-size-5-touch is-size-4-desktop">
+                Discover the latest posts and insights
+            </h2>
+        </div>
+    </div>
+</section>
+
+
+    <section class="section">
+        <div class="container">
+            <div class="columns is-multiline">
+                <div class="column is-8 is-offset-2 is-full-mobile">
+                    {% for post in posts %}
+                        <div class="box">
+                            <div class="content is-medium">
+                                <a href="{% url 'post_detail' post.category.slug post.slug %}" class="has-text-dark">
+                                    {% if post.image %}
+                                        <figure class="image is-3by2">
+                                            <img src="{{ post.image.url }}" alt="{{ post.title }}" class="is-fullwidth">
+                                        </figure>
+                                    {% endif %}
+                                    <h2 class="subtitle is-5 has-text-grey">{{ post.created_at|timesince }} ago</h2>
+                                    <h1 class="title is-3">{{ post.title }}</h1>
+                                    <p class="has-text-justified">
+                                        {{ post.intro }}
+                                    </p>
+                                </a>
+                            </div>
+                        </div>
+                    {% empty %}
+                        <p class="has-text-centered has-text-grey">No posts available at the moment. Check back later!</p>
+                    {% endfor %}
+                </div>
+            </div>
+        </div>
+    </section>
+{% endblock %}
+
+
+
+
+
+
+
+
+
+
+
+
+
+{% comment %} {% extends 'core/base.html' %}
+
+{% block title %} Home | {% endblock %}
+
+{% block content %}
     <section class="hero ">
         <div class="hero-body">
             <div class="container">
@@ -23,6 +84,7 @@
                                             {{ post.intro }}
                                         </p>
                                     </a>
+                                
                                 </div>
                             {% endfor %}
                         </div>
@@ -31,4 +93,4 @@
             </div>
         </div>
     </section>
-{% endblock %}
+{% endblock %} {% endcomment %}
