--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -20,6 +20,114 @@
     </style>
 </head>
 <body>
+    <!-- START NAV -->
+    <nav class="navbar is-mobile">
+        <div class="container">
+            <div class="navbar-brand">
+                <a class="navbar-item" href="/">
+                    <img src="{% static 'core/img/logo.png' %}" alt="myLogo">
+                    {% comment %} <strong>SRV</strong> {% endcomment %}
+                </a>
+                <span class="navbar-burger burger" data-target="navbarMenu">
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                </span>
+            </div>
+            <div id="navbarMenu" class="navbar-menu">
+                <div class="navbar-end">
+                    <div class="navbar-item">
+                        <form method="get" action="{% url 'search' %}">
+                            <div class="control has-icons-left">
+                                <input class="input is-rounded" name="query" type="text" placeholder="Search">
+                                <span class="icon is-left">
+                                    <i class="fa fa-search"></i>
+                                </span>
+                            </div>
+                        </form>
+                    </div>
+                    <a href="/" class="navbar-item is-active is-size-5 has-text-weight-semibold">
+                        Home
+                    </a>
+                    <a href="{% url 'about' %}" class="navbar-item is-size-5 has-text-weight-semibold">
+                        About
+                    </a>
+                </div>
+            </div>
+        </div>
+    </nav>
+    <!-- END NAV -->
+
+
+    <section class="section">
+        <div class="container">
+            <!-- <h1>Hello Friends, Welcome to my blog!</h1> -->
+            {% block content %}
+            {% endblock %}
+        </div>
+    </section>
+
+    <!-- START FOOTER -->
+    <footer class="footer">
+        <div class="content has-text-centered">
+            <p>
+                Copyright (c) 2023 - SRV Blog
+            </p>
+        </div>
+    </footer>
+    <!-- END FOOTER -->
+    
+    <script>
+        document.addEventListener('DOMContentLoaded', function() {
+            // Get all "navbar-burger" elements
+            const $navbarBurgers = Array.prototype.slice.call(document.querySelectorAll('.navbar-burger'), 0);
+
+            // Check if there are any navbar burgers
+            if ($navbarBurgers.length > 0) {
+                // Add a click event on each of them
+                $navbarBurgers.forEach(function($el) {
+                    $el.addEventListener('click', function() {
+                        // Get the target from the "data-target" attribute
+                        const target = $el.dataset.target;
+                        const $target = document.getElementById(target);
+
+                        // Toggle the class on both the "navbar-burger" and the target
+                        $el.classList.toggle('is-active');
+                        $target.classList.toggle('is-active');
+                    });
+                });
+            }
+        });
+    </script>
+</body>
+</html>
+
+
+
+
+
+{% comment %} {% load static %}
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- make it mobile friendly -->
+    <meta http-equiv="X-UA-Compatible" content="ie=edge"> <!-- just for internet explorar or edge -->
+
+    <title> {% block title %} {% endblock %} My Blog</title>
+
+    <link rel="stylesheet" href="https://unpkg.com/bulma@0.9.2/css/bulma.min.css">
+    <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+
+    <style>
+        nav.navbar {
+            height: 6rem !important;
+            box-shadow: 0 1px 3px 0 rgba(0, 0, 0, .1), 0 1px 2px 0 rgba(0, 0, 0, .06) !important;
+        }
+    </style>
+</head>
+<body>
         <!-- START NAV -->
     <nav class="navbar">
         <div class="container">
@@ -78,4 +186,4 @@
     <!-- END FOOTER -->
     
 </body>
-</html>
+</html> {% endcomment %}
