--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -25,8 +25,8 @@
         <div class="container">
             <div class="navbar-brand">
                 <a class="navbar-item" href="/">
-                    <img src="{% static 'core/img/logo.png' %}" alt="myLogo">
-                    {% comment %} <strong>SRV</strong> {% endcomment %}
+                    {% comment %} <img src="{% static 'core/img/logo.png' %}" alt="myLogo"> {% endcomment %}
+                    <strong>SRV</strong>
                 </a>
                 <span class="navbar-burger burger" data-target="navbarMenu">
                     <span></span>
